feat: videos from works to vimeo imbed and close modal btn fix

--- a/src/partials/works/dole-juice.hbs
+++ b/src/partials/works/dole-juice.hbs
@@ -1,35 +1,46 @@
 <div class="work__slider" data-client="dole-juice" hidden>
   <swiper-container class="work__swiper" free-mode="false" centered-slides="true" slides-per-view="auto"
-    mousewheel="true" keyboard="true" space-between="30" pagination-dynamic-bullets="true">
+    mousewheel="true" keyboard="true" space-between="80" pagination-dynamic-bullets="true">
     <swiper-slide>
       <div class="card">
-        <video controls poster="./dole/juice/rebecca.jpg">
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891656885/rendition/1080p/file.mp4?loc=external&signature=5deeb10740ff387e0d96c1151d674927b0425e8e3639f5ba68c29adb71cbb9c7"
-            type="video/mp4" />
-        </video>
+        <div id="rebecca"></div>
       </div>
     </swiper-slide>
 
     <swiper-slide>
       <div class="card">
-        <video controls poster="./dole/juice/ade.jpg">
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891427846/rendition/1080p/file.mp4?loc=external&signature=2cd84e83377c5567e6fddf27dd7bec530791c86284d69d7a28ee979241e91ee4"
-            type="video/mp4" />
-        </video>
+        <div id="ade"></div>
       </div>
     </swiper-slide>
 
     <swiper-slide>
       <div class="card">
-        <video controls poster="./dole/juice/michelle.jpg">
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891427869/rendition/1080p/file.mp4?loc=external&signature=bee6cfb054b031b685ddea96468cdc7aaebb10c88d0e16e6f3c7d7080844bade"
-            type="video/mp4" />
-        </video>
+        <div id="michelle"></div>
       </div>
     </swiper-slide>
+
+    <script>
+      const rebeccaPlayerOptions = {
+        id: 891656885, 
+        controls: true,
+        quality: 'auto'
+      };
+      const rebeccaPlayer = new Vimeo.Player('rebecca', rebeccaPlayerOptions);
+
+      const adePlayerOptions = {
+        id: 891427846, 
+        controls: true,
+        quality: 'auto'
+      };
+      const adePlayer = new Vimeo.Player('ade', adePlayerOptions);
+      
+      const michellePlayerOptions = {
+        id: 891427869, 
+        controls: true,
+        quality: 'auto'
+      };
+      const michellePlayer = new Vimeo.Player('michelle', michellePlayerOptions);
+    </script> 
  
   </swiper-container>
 </div>
