--- a/src/partials/works/dole-wiggles.hbs
+++ b/src/partials/works/dole-wiggles.hbs
@@ -1,35 +1,46 @@
 <div class="work__slider" data-client="dole-wiggles" hidden>
   <swiper-container class="work__swiper" free-mode="false" centered-slides="true" slides-per-view="auto"
-    mousewheel="true" keyboard="true" space-between="30" pagination-dynamic-bullets="true">
+    mousewheel="true" keyboard="true" space-between="80" pagination-dynamic-bullets="true">
     <swiper-slide>
       <div class="card">
-        <video controls poster="./dole/wiggles/dance.jpg">      
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891427991/rendition/1080p/file.mp4?loc=external&signature=e1d86782ac8f004bf366b7f2d731d923f65c43896ce0175bd341b5d6144fbee5"
-            type="video/mp4" />
-        </video>
+        <div id="dance"></div>
       </div>
     </swiper-slide>
 
     <swiper-slide>
       <div class="card">
-        <video controls poster="./dole/wiggles/dole-jokes.jpg">
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891427947/rendition/1080p/file.mp4?loc=external&signature=237538f96298462c4a3ff57f11229e459992568d51764b523c8c0e2c3081c4a9"
-            type="video/mp4" />
-        </video>
+        <div id="dole-jokes"></div>
       </div>
     </swiper-slide>
 
     <swiper-slide>
       <div class="card">
-        <video controls poster="./dole/wiggles/tickle.jpg">
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891427911/rendition/1080p/file.mp4?loc=external&signature=8fb395c2d26bb485059df0dc03a9d03cd6de3fd66e8f578ec7b32398743dcceb"
-            type="video/mp4" />
-        </video>
+        <div id="tickle"></div>
       </div>
     </swiper-slide>
  
+    <script>
+      const dancePlayerOptions = {
+        id: 891427991, 
+        controls: true,
+        quality: 'auto'
+      };
+      const dancePlayer = new Vimeo.Player('dance', dancePlayerOptions);
+
+      const doleJokesPlayerOptions = {
+        id: 891427947, 
+        controls: true,
+        quality: 'auto'
+      };
+      const doleJokesPlayer = new Vimeo.Player('dole-jokes', doleJokesPlayerOptions);
+
+      
+      const ticklePlayerOptions = {
+        id: 891427911, 
+        controls: true,
+        quality: 'auto'
+      };
+      const ticklePlayer = new Vimeo.Player('tickle', ticklePlayerOptions);
+    </script> 
   </swiper-container>
 </div>
