--- a/src/partials/works/fresh-thyme.hbs
+++ b/src/partials/works/fresh-thyme.hbs
@@ -1,35 +1,46 @@
 <div class="work__slider" data-client="fresh-thyme" hidden>
   <swiper-container class="work__swiper" free-mode="false" centered-slides="true" slides-per-view="auto"
-    mousewheel="true" keyboard="true" space-between="30" pagination-dynamic-bullets="true">
+    mousewheel="true" keyboard="true" space-between="80" pagination-dynamic-bullets="true">
     <swiper-slide>
       <div class="card">
-        <video controls poster="./fresh-thyme/get-real-steak.jpg">
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891428147/rendition/1080p/file.mp4?loc=external&signature=329a2f69556869949ce1747d8aaca2a7cf059b6ee978fa86d00b9b696533a834"
-            type="video/mp4" />
-        </video>
+        <div id="real-steak"></div>
       </div>
     </swiper-slide>
 
     <swiper-slide>
       <div class="card">
-        <video controls poster="./fresh-thyme/get-real-salmon.jpg">
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891428182/rendition/1080p/file.mp4?loc=external&signature=2f89858ac14dcf9568c0a5f86b1e8fa0ff84d4ec4d468d3db90194bdeb29b319"
-            type="video/mp4" />
-        </video>
+        <div id="real-salmon"></div>
       </div>
     </swiper-slide>
 
     <swiper-slide>
       <div class="card">
-        <video controls poster="./fresh-thyme/get-real-ftm-long-form.jpg">
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891428033/rendition/1080p/file.mp4?loc=external&signature=ead9a322a9f07e43edf545d2d912db350652894798738af6affc465e7aa20521"
-            type="video/mp4" />
-        </video>
+        <div id="real-ftm"></div>
       </div>
     </swiper-slide>
  
+    <script>
+      const realSteakPlayerOptions = {
+        id: 891428147, 
+        controls: true,
+        quality: 'auto'
+      };
+      const realSteakPlayer = new Vimeo.Player('real-steak', realSteakPlayerOptions);
+      
+      const realSalmonPlayerOptions = {
+        id: 891428182, 
+        controls: true,
+        quality: 'auto'
+      };
+      const realSalmonPlayer = new Vimeo.Player('real-salmon', realSalmonPlayerOptions);
+
+      const realFtmPlayerOptions = {
+        id: 891428033, 
+        controls: true,
+        quality: 'auto'
+      };
+      const realFtmPlayer = new Vimeo.Player('real-ftm', realFtmPlayerOptions);
+    </script> 
+
   </swiper-container>
 </div>
