--- a/src/partials/works/meijer.hbs
+++ b/src/partials/works/meijer.hbs
@@ -1,62 +1,36 @@
 <div class="work__slider" data-client="meijer" hidden>
   <swiper-container class="work__swiper" free-mode="false" centered-slides="true" slides-per-view="auto"
-    mousewheel="true" keyboard="true" space-between="30" pagination-dynamic-bullets="true">
+    mousewheel="true" keyboard="true" space-between="80" pagination-dynamic-bullets="true">
 
     <swiper-slide>
       <div class="card">
-        <video controls poster="./meijer/ice-cream.jpg">
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891428371/rendition/1080p/file.mp4?loc=external&signature=3bd1e9886da60dfa4e7319e89f33d19d34c091c36083ec82caa55e2d2ce13601"
-            type="video/mp4" />
-        </video>
+        <div id="ice-cream"></div>
       </div>
     </swiper-slide>
 
     <swiper-slide>
       <div class="card">
-        <video controls poster="./meijer/stop-and-go.jpg">
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891988063/rendition/1080p/file.mp4?loc=external&signature=f06e20e3690743dd77714fa441d10956129c6c0ad06e8671aea4813fe80f1716"
-            type="video/mp4" />
-        </video>
+        <div id="stop-and-go"></div>
       </div>
     </swiper-slide>
 
     <swiper-slide>
       <div class="card">
-        <video controls poster="./meijer/windows-down.jpg">
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891988114/rendition/1080p/file.mp4?loc=external&signature=999313a4915d142a5d569fda78cb1ffcb765ad7a337bda50bece24eef5fc6c95"
-            type="video/mp4" />
-        </video>
+        <div id="windows-down"></div>
       </div>
     </swiper-slide>
 
     <swiper-slide>
       <div class="card">
-        <video controls poster="./meijer/dream-big.jpg">
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891989054/rendition/1080p/file.mp4?loc=external&signature=f96df84cecede914afb914f3e6bf9299da0a5237bd9fb2b2949b7e3c290d6e25"
-            type="video/mp4" />
-        </video>
+        <div id="dream-big"></div>
       </div>
     </swiper-slide>
 
     <swiper-slide>
       <div class="card">
-        <video controls poster="./meijer/lpga-baton.jpg">
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891988200/rendition/1080p/file.mp4?loc=external&signature=9a51c35210d52fa7637943d3988cd9da330750d897bc8650990de3187e25ac2b"
-            type="video/mp4" />
-        </video>
+        <div id="lpga-baton"></div>
       </div>
     </swiper-slide>
-
-    {{!-- <swiper-slide>
-      <div class="card">
-        <img src="./meijer/prints/01-msg-cover.jpg" alt="Meijer" />
-      </div>
-    </swiper-slide> --}}
 
     <swiper-slide class="slide-img">
       <div class="card">
@@ -96,8 +70,48 @@
 
     <swiper-slide class="slide-img">
       <div class="card card--vertical">
-        <img src="./meijer/prints/08-msg-mailer.jpg" alt="Meijer" />
+        <div class="last-img">
+          <img src="./meijer/prints/08-msg-mailer.jpg" alt="Meijer" />
+        </div>
       </div>
     </swiper-slide>
+
+    <script src="https://player.vimeo.com/api/player.js"></script>
+    <script>
+      const iceCreamPlayerOptions = {
+        id: 891428371, 
+        controls: true,
+        quality: 'auto'
+      };
+      const iceCreamPlayer = new Vimeo.Player('ice-cream', iceCreamPlayerOptions);
+
+      const stopAndGoPlayerOptions = {
+        id: 891988063, 
+        controls: true,
+        quality: 'auto'
+      };
+      const stopAndGoPlayer = new Vimeo.Player('stop-and-go', stopAndGoPlayerOptions);
+
+      const windowsDownPlayerOptions = {
+        id: 891988114, 
+        controls: true,
+        quality: 'auto'
+      };
+      const windowsDownPlayer = new Vimeo.Player('windows-down', windowsDownPlayerOptions);
+
+      const dreamBigPlayerOptions = {
+        id: 891989054, 
+        controls: true,
+        quality: 'auto'
+      };
+      const dreamBigPlayer = new Vimeo.Player('dream-big', dreamBigPlayerOptions);
+
+      const lpgaPlayerOptions = {
+        id: 891988200, 
+        controls: true,
+        quality: 'auto'
+      };
+      const lpgaPlayer = new Vimeo.Player('lpga-baton', lpgaPlayerOptions);
+    </script>
   </swiper-container>
 </div>
