--- a/src/partials/works/frederiks.hbs
+++ b/src/partials/works/frederiks.hbs
@@ -1,34 +1,45 @@
 <div class="work__slider" data-client="frederiks" hidden>
   <swiper-container class="work__swiper" free-mode="false" centered-slides="true" slides-per-view="auto" mousewheel="true"
-    keyboard="true" space-between="30" pagination-dynamic-bullets="true">
+    keyboard="true" space-between="80" pagination-dynamic-bullets="true">
     <swiper-slide>
       <div class="card">
-        <video controls poster="./frederiks/pasta.jpg">   
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891428262/rendition/1080p/file.mp4?loc=external&signature=ad1ac65aab40f8e1ee83bfa5d77b28bc66fd0b54467989e891604c2c5b36091c"
-            type="video/mp4" />
-        </video>
+        <div id="pasta"></div>
       </div>
     </swiper-slide>
 
     <swiper-slide>
       <div class="card">
-        <video controls poster="./frederiks/steak-sizzle.jpg">   
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891428216/rendition/1080p/file.mp4?loc=external&signature=14be2789b262925a4aea524a41eaa55d810fc6761252cfae0dbe2188a5f38eb5"
-            type="video/mp4" />
-        </video>
+        <div id="steak-sizzle"></div>
       </div>
     </swiper-slide>
 
     <swiper-slide>
       <div class="card">
-        <video controls poster="./frederiks/taco-night.jpg">   
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/891428279/rendition/1080p/file.mp4?loc=external&signature=a374f154fa1664c3f75c87df0ac6ce83206f3d29c27a4eaeb1c298150ac1f437"
-            type="video/mp4" />
-        </video>
+        <div id="taco-night"></div>
       </div>
     </swiper-slide>
+    
+    <script>
+      const pastaPlayerOptions = {
+        id: 891428262, 
+        controls: true,
+        quality: 'auto'
+      };
+      const pastaPlayer = new Vimeo.Player('pasta', pastaPlayerOptions);
+      
+      const steakSizzlePlayerOptions = {
+        id: 891428216, 
+        controls: true,
+        quality: 'auto'
+      };
+      const steakSizzlePlayer = new Vimeo.Player('steak-sizzle', steakSizzlePlayerOptions);
 
+      const tacoNightPlayerOptions = {
+        id: 891428279, 
+        controls: true,
+        quality: 'auto'
+      };
+      const tacoNightPlayer = new Vimeo.Player('taco-night', tacoNightPlayerOptions);
+    </script> 
+  </swiper-container>
 </div>
