--- a/src/scss/_swiper.scss
+++ b/src/scss/_swiper.scss
@@ -20,7 +20,7 @@ swiper-slide {
 }
 
 swiper-slide {
-  width: 90%;
+  width: 100%;
   max-width: 900px;
 }
 
@@ -56,15 +56,52 @@ swiper-slide.slide-img {
 .card {
   position: relative;
   width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  #ice-cream {
+    iframe {
+      width: 950px;
+      height: 505px;
+      transform: scaleY(1.06);
+
+      @media (max-width: 1023px) {
+        border-radius: 12px;
+        width: 610px;
+        height: 320px;
+      }
+      @media (max-width: 780px) {
+        width: 400px;
+        height: 220px;
+      }
+      @media (max-width: 420px) {
+        width: 330px;
+        height: 179px;
+      }
+    }
+  }
 
   iframe {
     display: block;
     overflow: hidden;
+    width: 950px;
+    height: 535px;
     border-radius: 24px;
-    width: 100%;
 
     @media (max-width: 1023px) {
       border-radius: 12px;
+      width: 600px;
+      height: 340px;
+    }
+    @media (max-width: 780px) {
+      width: 400px;
+      height: 220px;
+    }
+    @media (max-width: 420px) {
+      width: 320px;
+      height: 185px;
     }
   }
 
@@ -82,6 +119,9 @@ swiper-slide.slide-img {
     margin: auto;
   }
 
+  .last-img img {
+    width: 69%;
+  }
 }
 
 .card--vertical {
