fix: hero inicial animation sequence, last word translate up and asterisk anim

--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -51,6 +51,6 @@
   </div>
 
   <div class="brand last-brand">
-    <div>HOT LAVA*</div>
+    <div data-splitting>HOT LAVA*</div>
   </div> 
 </footer>
