--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -78,6 +78,16 @@
     flex-direction: row;
     align-items: flex-end;
     justify-content: center;
+    
+    // transform-origin: 50% 30%;
+    // animation: rotateAsterisk 22s linear infinite;
+
+    .word:nth-child(3) {
+      span:nth-child(5) {
+        transform-origin: 50% 30%;
+        animation: rotateAsterisk 22s linear infinite;
+      }
+    }
 
     >div {
       font-size: clamp(180px, 36vw, 375px);
@@ -91,7 +101,16 @@
       pointer-events: none;
 
       @media (min-width: $change-layout) {
-        transform: translateY(20%);
+        transform: translateY(12%);
+      }
+    }
+
+    @keyframes rotateAsterisk {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg);
       }
     }
   }
