--- a/src/scss/_videofull.scss
+++ b/src/scss/_videofull.scss
@@ -14,7 +14,7 @@
 }
 .show {
   opacity: 1;
-  //animation: videoEnters 2s forwards;
+  animation: videoEnters 2s forwards;
 }
 
 @keyframes videoEnters {
