fix: changes in headline content

--- a/src/partials/sections/intro.hbs
+++ b/src/partials/sections/intro.hbs
@@ -5,7 +5,7 @@
       <h3 class="section__h3 title title-intro">
         {{!-- <span class="asterisk">*</span><span>This is our word </span><span>for epiphany.</span><span>We had one and</span>
         <span>that&#8217;s why we&#8217;re here…</span> --}}
-        <span class="asterisk">*</span>This is our word<br />for epiphany.<br />We had one and<br />
+        <span class="asterisk">*</span>This is our phrase<br />for epiphany.<br />We had one and<br />
         that&#8217;s why we&#8217;re here…
       </h3>
     </div>
