--- a/src/partials/sections/how.hbs
+++ b/src/partials/sections/how.hbs
@@ -12,7 +12,7 @@
     <!-- Slide 1 -->
     <div class="section__slide">
       <h3 class="section__h3 title"> 
-        Serious</br >strategery
+        Serious</br >strategy
       </h3>
       <p class="section__p">
         Something bubbles below the surface. These are strong and timely
