--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -1,10 +1,10 @@
 .hero {
   height: 100svh;
   width: 100vw;
-  background: url("/hero.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  // background: url("/hero.jpg");
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // background-position: center;
 
   display: flex;
   align-items: center;
@@ -14,21 +14,25 @@
 
   video {
     position: absolute;
-    left: -5vw;
+    left: 0;
     right: 0;
     top: 0;
     bottom: 0;
     margin: auto;
     z-index: 1;
 
-    @media (max-width: 980px) {
-      left: -80vw;
-    }
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 
-    @media (max-width: 479px) {
-      left: -90vw;
-      height: 100vh;
-    }
+    // @media (max-width: 980px) {
+    //   left: -80vw;
+    // }
+
+    // @media (max-width: 479px) {
+    //   left: -90vw;
+    //   height: 100vh;
+    // }
   }
 
   .red-cover {
