--- a/src/style.scss
+++ b/src/style.scss
@@ -26,3 +26,17 @@
 @import "./scss/how";
 @import "./scss/work";
 @import "./scss/contact";
+
+
+.noise {
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  pointer-events: none;
+  opacity: .05;
+}
