Changes of copy

--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,20 +1,25 @@
 <footer id="contact" class="contact">
-  
+
   <div class="wrapper --flexcenter">
     <div class="contact__info">
-      
+
       <div class="contact__phrase">
         <p class="contact-title title">
-          <span class="asterisk">*</span>Wanna </br >chat?
+          <span class="asterisk">*</span>Ready to go<br />
+          with the flow?
         </p>
       </div>
 
       <div class="contact__links">
         <p class="section__p">
-          Well, Hot Lava! We’d love to show you what we can do. For inquiries, contact
+          Hot Lava! We’d love to show you what we can do. For inquiries, contact
         </p>
         <p class="section__p">
-          <a href="mailto:info@hotlavaagency.com" target="_blank" rel="noopener noreferrer">info@<strong>hotlavaagency.com</strong></a>
+          <a
+            href="mailto:info@hotlavaagency.com"
+            target="_blank"
+            rel="noopener noreferrer"
+          >info@<strong>hotlavaagency.com</strong></a>
         </p>
       </div>
     </div>
@@ -22,5 +27,5 @@
 
   <div class="brand last-brand">
     <div data-splitting>HOT LAVA*</div>
-  </div> 
+  </div>
 </footer>
