--- a/src/partials/sections/about.hbs
+++ b/src/partials/sections/about.hbs
@@ -1,31 +1,30 @@
 <section id="about-us" class="about">
- 
-  <div class="wrapper --flexbotm"> 
+
+  <div class="wrapper --flexbotm">
     <div class="section__slide">
       <h3 class="section__h3 title">
-        <span class="asterisk">*</span>Nice to</br >meet you.
-      </h3>         
-      <p class="section__p">
-        Hot Lava is the very best of our big-brand, big-agency
-        experiences. Just smaller. And more human. Our strong, supportive
-        network ensures bigger thinking, better efficiencies, faster
-        results and bold, sticky work.*
-        <small>*Without the mess.</small>
-      </p> 
+        <span class="asterisk">*</span>Flow starts with
+        <br />the way we work.
+      </h3>
+      <p class="section__p">We’re a full-service advertising agency that gives
+        clients direct access to award-winning creators and doers. Our team is
+        simply an extension of yours – with personal service, an agile approach,
+        and effective, defining work.
+      </p>
     </div>
-  </div> 
+  </div>
 
   <div class="team">
 
-    {{!-- Kristi --}}
+    {{! Kristi }}
     <div class="team__card team__card--1">
-      <div class="team__bio"> 
-        <h3>Kristi</h3>  
+      <div class="team__bio">
+        <h3>Kristi</h3>
         <p>
-          Kristi has 15+ years experience in writing, public relations,
-          brand strategy, building teams and creating highly effective
-          work in CPG and retail.
-        </p> 
+          Kristi has 15+ years experience in writing, public relations, brand
+          strategy, building teams and creating highly effective work in CPG and
+          retail.
+        </p>
       </div>
       <div class="team__pic">
         <div class="team__blend">
@@ -33,16 +32,16 @@
         </div>
       </div>
     </div>
-    
-    {{!-- Phil --}}
+
+    {{! Phil }}
     <div class="team__card team__card--2">
-      <div class="team__bio"> 
-        <h3>Phil</h3>  
+      <div class="team__bio">
+        <h3>Phil</h3>
         <p>
-          Phil&#8217;s thoughtful and boundary-pushing approach has
-          resulted in cohesive, impactful work for the world&#8217;s best
-          brands, at the best agencies in Chicago and NYC.
-        </p> 
+          Phil&#8217;s thoughtful and boundary-pushing approach has resulted in
+          cohesive, impactful work for the world&#8217;s best brands, at the
+          best agencies in Chicago and NYC.
+        </p>
       </div>
       <div class="team__pic">
         <div class="team__blend">
