--- a/src/partials/sections/intro.hbs
+++ b/src/partials/sections/intro.hbs
@@ -3,22 +3,28 @@
 
     <div class="section__slide">
       <h3 class="section__h3 title title-intro">
-        {{!-- <span class="asterisk">*</span><span>This is our word </span><span>for epiphany.</span><span>We had one and</span>
-        <span>that&#8217;s why we&#8217;re here…</span> --}}
-        <span class="asterisk">*</span>This is our phrase<br />for epiphany.<br />We had one and<br />
+        {{! <span class="asterisk">*</span><span>This is our word </span><span>for epiphany.</span><span>We had one and</span>
+        <span>that&#8217;s why we&#8217;re here…</span> }}
+        <span class="asterisk">*</span>This is our phrase<br />for epiphany.<br
+        />We had one and<br />
         that&#8217;s why we&#8217;re here…
       </h3>
     </div>
 
     <div class="section__slide">
       <h3 class="section__h3 title title-second">
-        {{!-- <span>There&#8217;s a</span><span>shortcut to</span><span>greatness.</span> --}}
-        There&#8217;s a<br />shortcut to<br />greatness.
+        Ideas need to
+        <br />flow more freely.
       </h3>
       <p class="section__p paragraph-intro">
-        <span><strong>So we&#8217;ll give it to you straight:</strong> </span>our full-service ad agency gives clients direct 
-        access to award-winning creators and doers. <br /><br />
-        <span><strong>No layers,</strong> </span>just creatives who excel at handling complexity.
+        <strong>We’ve reached our limits with limits.</strong><br />
+        The advertising industry has become comfortable with rigid campaign
+        constructs that cannot travel.
+        <br /><br />
+        <strong>It’s time to evolve with our times. </strong><br />
+        We recognize the complexities of today’s marketing challenges, and we
+        believe that ideas need to flow freely to be effective across audiences,
+        platforms and cultures.
       </p>
     </div>
   </div>
