--- a/src/partials/sections/how.hbs
+++ b/src/partials/sections/how.hbs
@@ -5,45 +5,35 @@
     <!-- Slide Intro -->
     <div class="section__slide">
       <h3 class="section__h3 title">
-        <span class="asterisk">*</span>Here’s how </br > we roll.</span>
+        <span class="asterisk">*</span>Here’s how </br > we flow.</span>
       </h3>
     </div> 
 
     <!-- Slide 1 -->
     <div class="section__slide">
-      <h3 class="section__h3 title"> 
-        Serious</br >strategy
-      </h3>
+      <h3 class="section__h3 title">Momentum begins with a strategic foundation.</h3>
       <p class="section__p">
-        Something bubbles below the surface. These are strong and timely
-        insights, and we dig deep for this stuff. Hot Lava is when we
-        uncover that single truth that sets our clients apart.
+        <strong>One size will never, ever fit all:</strong><br />
+        We don’t believe in pre-packaged strategic solutions. Whether we’re articulating a company’s purpose or amplifying their competitive edge, our strategic approach will always flex to the business challenge. 
       </p>
     </div>
 
     <!-- Slide 2 -->
     <div class="section__slide">
-      <h3 class="section__h3 title"> 
-        Hot hot</br >hot ideas
-      </h3>
+      <h3 class="section__h3 title">Ideas are measured by their fluidity.</h3>
       <p class="section__p">
-        Distinct and compelling creative – that’s all we deliver. Budgets
-        are tighter and attention spans are shorter, so our work works
-        harder. Hot Lava is our commitment to simply smart and
-        blow-your-mind creative.
+        <strong>Our focus is on defining creative:</strong>
+        We mine for ideas that flood our thoughts, ignite our emotions and build enough momentum to change the way we act. 
+        Our creative flow grants us permission to challenge the norm with a nimble spirit.
       </p>
     </div>
 
     <!-- Slide 3 -->
     <div class="section__slide">
-      <h3 class="section__h3 title"> 
-        Pressure-cooked</br >production
-      </h3>
+      <h3 class="section__h3 title">Flow is always-on production.</h3>
       <p class="section__p">
-        Our production runs smart, and our network is large. Hot Lava is
-        how we squeeze better quality and higher quantity out of tighter
-        budgets. Expect extra content without extra costs.*
-        <small>*For real.</small>
+        <strong>We’ve said “so long” to silos:</strong>
+        Our production team is involved from the start, working with strategy and creative to guide projects from start to finish. Every production flows through our highly connected network of timely and talented creators.
       </p>
     </div>
     
