--- a/src/partials/copyright.hbs
+++ b/src/partials/copyright.hbs
@@ -4,8 +4,8 @@
       <p class="desktop">©2024. HOT LAVA* - ALL RIGHTS RESERVED</p>
       <p class="mobile">©HOT LAVA*</p>
     </div>
-    {{! <div class="slogan">
-      <p>*You’re going to like it here</p>
-    </div> }}
+    <div class="slogan">
+      <p></p>
+    </div>
   </div>
 </section>
