Shop copy editing

--- a/src/partials/sections/shop.hbs
+++ b/src/partials/sections/shop.hbs
@@ -1,5 +1,5 @@
 <section class="shop" id="shop">
   <div class="wrapper">
-    <h2>Official Hotlava Merch</h2>
+    <h2>Official Hot Lava Merch</h2>
   </div>
 </section>
