--- a/src/scss/_shop.scss
+++ b/src/scss/_shop.scss
@@ -8,4 +8,13 @@
     color: $color-orange;
     text-align: center;
   }
+
+  .wrapper {
+    text-align: center;
+
+    .shopify-buy-frame--productSet {
+      width: 90%;
+      margin: auto;
+    }
+  }
 }
