--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'graphiksuper';
-  src: url('./graphiksuper-webfont.woff2') format('woff2'),
-    url('./graphiksuper-webfont.woff') format('woff');
+  src: url('./fonts/graphiksuper-webfont.woff2') format('woff2'),
+    url('./fonts/graphiksuper-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -16,16 +16,16 @@
 
 @font-face {
   font-family: 'graphik_regularregular';
-  src: url('./graphikregular-webfont.woff2') format('woff2'),
-    url('./graphikregular-webfont.woff') format('woff');
+  src: url('./fonts/graphikregular-webfont.woff2') format('woff2'),
+    url('./fonts/graphikregular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 // @font-face {
 //   font-family: 'graphiklight';
-//   src: url('./graphiklight-webfont.woff2') format('woff2'),
-//     url('./graphiklight-webfont.woff') format('woff');
+//   src: url('./fonts/graphiklight-webfont.woff2') format('woff2'),
+//     url('./fonts/graphiklight-webfont.woff') format('woff');
 //   font-weight: normal;
 //   font-style: normal;
 // }
