styles: fix fonts lost

--- a/src/partials/copyright.hbs
+++ b/src/partials/copyright.hbs
@@ -1,8 +1,8 @@
 <section class="copyright">
   <div class="wrapper">
     <div class="copyright__text">
-      <p class="desktop">©2024. HOT LAVA* - ALL RIGHTS RESERVED</p>
-      <p class="mobile">©HOT LAVA*</p>
+      <p class="desktop">©2024. Hot Lava* - All rights reserved</p>
+      <p class="mobile">©Hot Lava*</p>
     </div>
     <div class="slogan">
       <p></p>
