--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -67,7 +67,8 @@
       margin: 0 0 10px 0.5vw;
 
       font-size: clamp(24px, 3vw, 36px);
-      font-weight: 900;
+      font-family: $main-font-title;
+      font-weight: 400;
       letter-spacing: -0.01em;
     }
 
