--- a/src/scss/_slogan.scss
+++ b/src/scss/_slogan.scss
@@ -5,6 +5,7 @@
   bottom: 3%;
 
   p {
+    font-family: $main-font;
     font-size: 13px;
     font-weight: 400;
     letter-spacing: -0.0225em;
@@ -13,7 +14,7 @@
     opacity: .5;
 
     @media (min-width: $change-layout) {
-      font-size: 14.5px;
+      font-size: 14px;
     }
   }
 }
