Change logo Hero for SVG w/Gsap

--- a/src/partials/head.hbs
+++ b/src/partials/head.hbs
@@ -4,11 +4,17 @@
   <link rel="stylesheet" href="https://use.typekit.net/fqq8lsn.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta property="og:locale" content="en_US">
+  <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Hot Lava* Agency" />
-  <meta property="og:title" content="Hot Lava* – Full service advertising agency. *Non-toxic." />
-  <meta property="og:description" content="Hot Lava* – Full service advertising agency. *Non-toxic." />
-  <meta property="og:url" content="https://www.hotlavaagency.com/" /> 
+  <meta
+    property="og:title"
+    content="Hot Lava* – Full service advertising agency. *Non-toxic."
+  />
+  <meta
+    property="og:description"
+    content="Hot Lava* – Full service advertising agency. *Non-toxic."
+  />
+  <meta property="og:url" content="https://www.hotlavaagency.com/" />
   <meta property="og:image" content="share.jpg" />
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:image" content="share.jpg" />
