--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -62,3 +62,13 @@
     max-width: 90px;
   }
 }
+
+.logo-container {
+  width: min(100%, 600px);
+
+  svg {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
