--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -63,8 +63,7 @@
 
     small {
       display: block;
-      margin: 0 0 0 .5vw;
-      margin: 0 0 10px 0.5vw;
+      margin: 0 0 10px 0;
 
       font-size: clamp(24px, 3vw, 36px);
       font-family: $main-font-title;
