--- a/src/partials/head.hbs
+++ b/src/partials/head.hbs
@@ -15,7 +15,7 @@
     content="Hot Lava* – Full service advertising agency. *Non-toxic."
   />
   <meta property="og:url" content="https://www.hotlavaagency.com/" />
-  <meta property="og:image" content="share.jpg" />
+  <meta property="og:image" content="https://www.hotlavaagency.com/share.jpg" />
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:image" content="share.jpg" />
   <meta property="twitter:site" content="@hotlavaagency" />
