--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -39,10 +39,9 @@
       width: 64px;
       height: 64px;
 
-
       border-radius: 999px;
       border: 1px solid $color-orange;
-      transition-duration: .35s;
+      transition-duration: 0.35s;
       cursor: pointer;
 
       @media (max-width: 480px) {
@@ -52,7 +51,7 @@
 
       svg {
         path {
-          transition-duration: .35s;
+          transition-duration: 0.35s;
         }
       }
 
@@ -78,7 +77,7 @@
     flex-direction: row;
     align-items: flex-end;
     justify-content: center;
-    
+
     // transform-origin: 50% 30%;
     // animation: rotateAsterisk 22s linear infinite;
 
@@ -89,10 +88,10 @@
       }
     }
 
-    >div {
+    > div {
       font-size: clamp(32px, 20vw, 142px);
       font-weight: 900;
-      line-height: .8;
+      line-height: 0.8;
       color: $color-orange;
       text-wrap: nowrap;
       white-space: nowrap;
@@ -175,11 +174,38 @@
   a {
     color: $color-orange;
     text-decoration: none;
-    transition: .35s;
+    transition: 0.35s;
 
     &:hover {
       color: $color-white;
     }
   }
+}
 
+.contact__social {
+  padding: 3em 0 2em 0;
+
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 1.5em;
+
+  a {
+    display: inline-flex;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+    transition: opacity 0.3s ease;
+  }
+
+  a:hover {
+    opacity: 0.8;
+  }
+
+  svg {
+    width: 24px;
+    height: 24px;
+    fill: white;
+  }
 }
